fix availble
